# funcfmt

./: Cargo.toml  README.md
.github/workflows/: ci.yml  miri.yml
benches/: benchmark.rs
examples/: basic.rs  bench.rs
src/: lib.rs  lib_test.rs
