[package]
name = "funcfmt"
version = "0.3.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "\"Parse once, populate many\" templating using function traits"
repository = "https://github.com/cdown/funcfmt"
readme = "README.md"
keywords = ["template"]
categories = ["template-engine"]
license = "MIT"
rust-version = "1.61"

[dependencies]
fnv = "1.0.7"
smallvec = { version = "1.13.2", features = ["union"] }
smartstring = { version = "1.0.1", default-features = false }
thiserror = "2.0.0"

[dev-dependencies]
once_cell = "1.20.2"
proptest = "1.5.0"
